--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-react-parser": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-redux": "^9.0.4",
