--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^3.3.1",
     "dompurify": "^3.0.8",
     "html-react-parser": "^5.1.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
