--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "he": "^1.2.0",
     "html-react-parser": "^5.1.1",
     "normalize.css": "^8.0.1",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-redux": "^9.0.4",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack-dev-middleware": "^7.2.1"
   },
   "scripts": {
     "start": "set \"BROWSER=none\" && start chrome http://localhost:3000 && react-scripts start",
